--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Vista\VistaDirector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\VistaDirector.Designer.cs">
+      <DependentUpon>VistaDirector.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\VistaLogIn.cs">
       <SubType>Form</SubType>
     </Compile>
