Se actualizaron las ventanas
Se les agregó el icono, se les modificó el nombre, se les quito el boton de maximizar y la opcion de resize

--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -84,6 +84,9 @@
     <Compile Include="Vista\VistaSecretaria.Designer.cs">
       <DependentUpon>VistaSecretaria.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vista\VistaDirector.resx">
+      <DependentUpon>VistaDirector.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vista\VistaEncargadoDeBodega.resx">
       <DependentUpon>VistaEncargadoDeBodega.cs</DependentUpon>
     </EmbeddedResource>
