Mejoras en el manejo de ventanas y el código.
Se agregaron comentarios al código anterior.
Se crearon las clases de controladores básicas.
Se mejoró la navegación entre ventanas.
El conector a la BD ahora es un Singleton.
Las ventanas principales están asociadas a sus respectivos controladores.

--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -50,8 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controlador\Controlador.cs" />
-    <Compile Include="Controlador\ControladorLogIn.cs" />
+    <Compile Include="Controlador\Controlador Administrador\ControladorAdministrador.cs" />
+    <Compile Include="Controlador\Controlador Bodeguero\ControladorBodeguero.cs" />
+    <Compile Include="Controlador\Controlador Gerente\ControladorGerente.cs" />
+    <Compile Include="Controlador\Controlador Secretaria\ControladorSecretaria.cs" />
+    <Compile Include="Controlador\ControladorDirector\ControladorDirector.cs" />
+    <Compile Include="Controlador\Controlador\Controlador.cs" />
+    <Compile Include="Controlador\Controlador LogIn\ControladorLogIn.cs" />
     <Compile Include="Modelo\Conector_BD.cs" />
     <Compile Include="Vista\Vistas Secretaria\VistaCrearDepartamento.cs">
       <SubType>Form</SubType>
