Creación métodos Controlador Secretaria
Metodos para los botones del controlador secretaria, mas el csproj , que reconoce al ControladorAgregarUsuario y al ControladorCrearSolicitud

--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -51,8 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controlador\Controlador Administrador\ControladorAdministrador.cs" />
+    <Compile Include="Controlador\Controlador Administrador\ControladorCrearSolicitud.cs" />
     <Compile Include="Controlador\Controlador Bodeguero\ControladorBodeguero.cs" />
     <Compile Include="Controlador\Controlador Gerente\ControladorGerente.cs" />
+    <Compile Include="Controlador\Controlador Secretaria\ControladorAgregarUsuario.cs" />
     <Compile Include="Controlador\Controlador Secretaria\ControladorSecretaria.cs" />
     <Compile Include="Controlador\ControladorDirector\ControladorDirector.cs" />
     <Compile Include="Controlador\Controlador\Controlador.cs" />
