Creacion Controlador Crear Sala
Creacion de métodos y descripción que corresponden al controlador de crear sala. Aqui tambien se encuentra el archivo .csproj

--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Controlador\Controlador Bodeguero\ControladorBodeguero.cs" />
     <Compile Include="Controlador\Controlador Gerente\ControladorGerente.cs" />
     <Compile Include="Controlador\Controlador Secretaria\ControladorAgregarUsuario.cs" />
+    <Compile Include="Controlador\Controlador Secretaria\ControladorCrearDepartamento.cs" />
+    <Compile Include="Controlador\Controlador Secretaria\ControladorCrearSala.cs" />
     <Compile Include="Controlador\Controlador Secretaria\ControladorSecretaria.cs" />
     <Compile Include="Controlador\ControladorDirector\ControladorDirector.cs" />
     <Compile Include="Controlador\Controlador\Controlador.cs" />
