--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -63,6 +63,18 @@
     <Compile Include="Controlador\Controlador\Controlador.cs" />
     <Compile Include="Controlador\Controlador LogIn\ControladorLogIn.cs" />
     <Compile Include="Modelo\Conector_BD.cs" />
+    <Compile Include="Vista\Vistas Secretaria\VistaAsignarAdministrador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Vistas Secretaria\VistaAsignarAdministrador.Designer.cs">
+      <DependentUpon>VistaAsignarAdministrador.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\Vistas Secretaria\VistaAsignarSala.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Vistas Secretaria\VistaAsignarSala.Designer.cs">
+      <DependentUpon>VistaAsignarSala.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Vistas Secretaria\VistaCrearDepartamento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +158,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Vistas Administrador\VistaCrearSolicitud.resx">
       <DependentUpon>VistaCrearSolicitud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\Vistas Secretaria\VistaAsignarAdministrador.resx">
+      <DependentUpon>VistaAsignarAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\Vistas Secretaria\VistaAsignarSala.resx">
+      <DependentUpon>VistaAsignarSala.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Vistas Secretaria\VistaCrearDepartamento.resx">
       <DependentUpon>VistaCrearDepartamento.cs</DependentUpon>
