--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Controlador\Controlador\Controlador.cs" />
     <Compile Include="Controlador\Controlador LogIn\ControladorLogIn.cs" />
     <Compile Include="Modelo\Conector_BD.cs" />
+    <Compile Include="Vista\Vistas Administrador\VistaVerSolicitud.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Vistas Administrador\VistaVerSolicitud.Designer.cs">
+      <DependentUpon>VistaVerSolicitud.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Vistas Secretaria\VistaCrearDepartamento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +147,9 @@
     <Compile Include="Vista\Vistas Secretaria\VistaSecretaria.Designer.cs">
       <DependentUpon>VistaSecretaria.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vista\Vistas Administrador\VistaVerSolicitud.resx">
+      <DependentUpon>VistaVerSolicitud.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vista\Vistas Bodeguero\VistaIncorporarObjeto.resx">
       <DependentUpon>VistaIncorporarObjeto.cs</DependentUpon>
     </EmbeddedResource>
