--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -65,10 +65,10 @@
     <Compile Include="Controlador\Controlador LogIn\ControladorLogIn.cs" />
     <Compile Include="Controlador\Controlador Vistas Compartidas\ControladorVistaItem.cs" />
     <Compile Include="Modelo\Conector_BD.cs" />
-    <Compile Include="Vista\Vistas Administrador\VistaVerSolicitud.cs">
+    <Compile Include="Vista\VistasCompartidas\VistaVerSolicitud.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Vista\Vistas Administrador\VistaVerSolicitud.Designer.cs">
+    <Compile Include="Vista\VistasCompartidas\VistaVerSolicitud.Designer.cs">
       <DependentUpon>VistaVerSolicitud.cs</DependentUpon>
     </Compile>
     <Compile Include="Vista\Vistas Secretaria\VistaCrearDepartamento.cs">
@@ -149,14 +149,14 @@
     <Compile Include="Vista\Vistas Secretaria\VistaSecretaria.Designer.cs">
       <DependentUpon>VistaSecretaria.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Vista\Vistas Administrador\VistaVerSolicitud.resx">
+    <EmbeddedResource Include="Vista\VistasCompartidas\VistaVerSolicitud.resx">
       <DependentUpon>VistaVerSolicitud.cs</DependentUpon>
     </EmbeddedResource>
-    <Compile Include="Vista\VistasCompartidas\VistaItem.cs">
+    <Compile Include="Vista\VistasCompartidas\VistaVerItem.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Vista\VistasCompartidas\VistaItem.Designer.cs">
-      <DependentUpon>VistaItem.cs</DependentUpon>
+    <Compile Include="Vista\VistasCompartidas\VistaVerItem.Designer.cs">
+      <DependentUpon>VistaVerItem.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Vista\Vistas Bodeguero\VistaIncorporarObjeto.resx">
       <DependentUpon>VistaIncorporarObjeto.cs</DependentUpon>
@@ -200,8 +200,8 @@
     <EmbeddedResource Include="Vista\Vistas Secretaria\VistaSecretaria.resx">
       <DependentUpon>VistaSecretaria.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Vista\VistasCompartidas\VistaItem.resx">
-      <DependentUpon>VistaItem.cs</DependentUpon>
+    <EmbeddedResource Include="Vista\VistasCompartidas\VistaVerItem.resx">
+      <DependentUpon>VistaVerItem.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
