--- a/MuseoArkham/MuseoArkham.csproj
+++ b/MuseoArkham/MuseoArkham.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Controlador\Controlador Administrador\ControladorAdministrador.cs" />
     <Compile Include="Controlador\Controlador Administrador\ControladorCrearSolicitud.cs" />
+    <Compile Include="Controlador\Controlador Secretaria\ControladorCambiarAdministrador.cs" />
     <Compile Include="Controlador\Controlador Vistas Compartidas\ControladorVerRegistro.cs" />
     <Compile Include="Controlador\Controlador Vistas Compartidas\ControladorVerSolicitud.cs" />
     <Compile Include="Controlador\Controlador Bodeguero\ControladorBodeguero.cs" />
@@ -84,6 +85,12 @@
     </Compile>
     <Compile Include="Vista\Vistas Secretaria\VistaAsignarSala.Designer.cs">
       <DependentUpon>VistaAsignarSala.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\Vistas Secretaria\VistaCambiarAdministrador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Vistas Secretaria\VistaCambiarAdministrador.Designer.cs">
+      <DependentUpon>VistaCambiarAdministrador.cs</DependentUpon>
     </Compile>
     <Compile Include="Vista\VistasCompartidas\VistaVerRegistro.cs">
       <SubType>Form</SubType>
@@ -175,6 +182,9 @@
     <Compile Include="Vista\Vistas Secretaria\VistaSecretaria.Designer.cs">
       <DependentUpon>VistaSecretaria.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vista\Vistas Secretaria\VistaCambiarAdministrador.resx">
+      <DependentUpon>VistaCambiarAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vista\VistasCompartidas\VistaVerRegistro.resx">
       <DependentUpon>VistaVerRegistro.cs</DependentUpon>
     </EmbeddedResource>
